--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,8 @@ dependencies {
     def rxAndroid_version = '2.0.2'
     implementation"io.reactivex.rxjava2:rxjava:$rxJava_version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroid_version"
+
+    def mockito_core_version = '2.18.0'
+    testImplementation "org.mockito:mockito-core:$mockito_core_version"
+    testImplementation 'android.arch.core:core-testing:1.1.1'
 }
