--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply from: rootProject.file('jacoco.gradle')
+
 android {
     compileSdkVersion 27
     defaultConfig {
